--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
   <meta name="generator" content="Hugo 0.79.0">
-  <title>Alex CodeGlider</title>
+  <title>{{ blog.title }}</title>
 
   <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/album/">
 
@@ -58,7 +58,7 @@
           <div class="navbar-nav ms-auto">
             <a class="nav-link" href="http://twitter.com">Twitter</a>
             <a class="nav-link" href="{% static 'chapter1.pdf'%}">Resume</a>
-            <a class="nav-link" href="{% url 'allblogs' %}">Blog</a>
+            <a class="nav-link active" href="{% url 'allblogs' %}">Blog</a>
 
           </div>
         </div>
@@ -66,37 +66,15 @@
     </nav>
   </header>
 
-  <main>
+  <main role='main'>
+    <div class="container">
 
-    <section class="py-5 text-center container">
-      <div class="row py-lg-5">
-        <div class="col-lg-6 col-md-8 mx-auto">
-          <h1 class="fw-light"> Hi i'm Alex CodeGlider</h1>
-          <p class="lead text-muted">My name is Alex and I love to code. I do ML and full stack</p>
-          <p>
-            <a href="mailto:alejandro.leda@gmail.com" class="btn btn-primary my-2">Email me</a>
-          </p>
-          <img src="{% static 'adam_and_eve.png' %}"
-        </div>
-      </div>
-    </section>
-
-    <div class="album py-5 bg-light">
-      <div class="container">
-
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-          {% for job in jobs.all %}
-          <div class="col">
-            <div class="card shadow-sm">
-              <img src="{{ job.image.url }}" svg class="bd-placeholder-img card-img-top"  width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/></svg>
-              <div class="card-body">
-                <p class="card-text">{{ job.summary }}</p>
-              </div>
-            </div>
-          </div>
-          {% endfor %}
-        </div>
-      </div>
+      <h1 class="text-center pt-3">{{ blog.title }}</h1>
+      <p class="text-center">{{ blog.pub_date }}</p>
+      <img class="img-fluid" src="{{blog.image.url}}"/>
+      <br />
+      <br />
+      <p>{{blog.body}}</p>
     </div>
 
   </main>
