--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -85,6 +85,7 @@
   <footer class="text-muted py-5">
     <div class="container text-center">
       <p>Have a happy {% now "Y" %} </p>
+      <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
     </div>
   </footer>
 
