--- a/avails/templates/avails/avails.html
+++ b/avails/templates/avails/avails.html
@@ -10,6 +10,8 @@
 {% if user.is_authenticated %}
 <h1>Upload files</h1>
 
+<div class="row">
+  <div class="col-4">
 <form method="POST" action="{% url 'avails' %}" enctype="multipart/form-data">
   {% csrf_token %}
   SVOD Avails:
@@ -35,6 +37,27 @@
   <br />
   <input class="btn btn-primary" type="submit" value="Upload" />
 </form>
+</div>
+<div class="col-4">
+<form method="POST" action="{% url 'avails' %}" enctype="multipart/form-data">
+{% csrf_token %}
+PanRegional Pay TV Avails:
+<br />
+<input type="file" name="ptv_avails" />
+<br />
+Screening Links:
+<br />
+<input type="file" name="screeners" />
+<br />
+Ratings:
+<br />
+<input type="file" name="ratings" />
+<br />
+<br />
+<input class="btn btn-primary" type="submit" value="Upload" />
+</form>
+</div>
+</div>
 {% else %}
   <a href="{% url 'login' %}" style="text-decoration: none"><p class="lead text-muted">Please login to continue</p></a>
 {% endif %}
